Sat Jul 17 03:33:14 CEST 2010  John Tytgat  <John.Tytgat@aaug.net>

	* libtool.m4.p: Move away as gcc patch for its common libtool.m4.
	* libtool-org.m4: Remove.
	* configure.ac: No longer expect to find a local libtool.m4.

Wed Jun 23 01:08:51 CEST 2010  John Tytgat  <John.Tytgat@aaug.net>

	* configure.ac (AC_PREREQ): Require at least Autotools 2.64 (like
	gcc 4.6); m4_rename -> m4_rename_force

// ------------------------------------ ^^^ gcc4.6trunk ^^^ port -----------------

Sat Jul  3 19:20:39 CEST 2010  John Tytgat  <John.Tytgat@aaug.net>

	* include/sys/socket.h (__SOCKADDR_ARG, __CONST_SOCKADDR_ARG): Add
	temporary workaround for llvm-gcc bug
	(http://llvm.org/bugs/show_bug.cgi?id=7422).

Wed Jun 16 15:17:11 2010  Lee Noar  <leenoar@sky.com>

	* crt/(g)crt0.s(_start): Store pointers to shared library static
	object initialisation/finalisation routines.
	* sys/_syslib.s: Remove the reference to _dl_call_ctors by allowing
	the dynamic loader to pass in the address of a suitable function.
	Call/register dynamic loader supplied shared library init/fini
	functions (if not NULL).
	(__check_stack): Don't rely on caller for PIC register. In the
	shared library, the stack chunk dealloc function and return address
	can and will be higher than application address space so don't use
	them for stack validation.
	* incl-local/internal/asm_dec.s: Rename CRT1_RESERVED1 and
	CRT1_RESERVED2 as CRT1_LIB_INIT and CRT1_LIB_FINI respectively.

Wed Jun  9 00:05:06 CEST 2010  John Tytgat  <John.Tytgat@aaug.net>

	* unix/putenv.c(__addenv_to_env): No need to call __set_errno(ENOMEM)
	after a failed malloc/realloc call.
	* grp/getgroups.c(setgroups): Likewise.
	* common/objattr.c(__object_get_attrs,__object_set_attrs): Likewise.
	* common/symlinks.c(__resolve_symlinks): Likewise.
	* include/unistd.h(lseek64): Consistent declaration like other 64-bit
	variants.
	* unix/reopen.c(__reopen): Minor code cleanup.
	* unix/pipe.c(pipe): Likewise.
	* unix/dup2.c(dup2): Likewise.