@@ -1,3 +1,8 @@
+Wed Jul 21 14:46:21 CEST 2010  John Tytgat  <John.Tytgat@aaug.net>
+
+	* unix/unix.c (exit): Add temporary workaround for gcc bug
+	http://gcc.gnu.org/bugzilla/show_bug.cgi?id=44974
+
 Sat Jul 17 03:33:14 CEST 2010  John Tytgat  <John.Tytgat@aaug.net>
 
 	* libtool.m4.p: Move away as gcc patch for its common libtool.m4.
